kubernetes/cluster-policies/tests/resources/local-development-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: local-development-image
spec:
  containers:
    - name: app
      image: saga-ecommerce/orders-api:local
